--- a/values-global.yaml
+++ b/values-global.yaml
@@ -20,16 +20,16 @@ global:
       bucketBaseName: "wh-my-bucket"
 
   imageregistry:
-    account: PLAINTEXT
+    account: michael_souto
     hostname: quay.io
     type: quay
 
   git:
     hostname: github.com
-    account: PLAINTEXT
-    username: PLAINTEXT
+    account: mikes429
+    username: mikes429
     email: SOMEWHERE@EXAMPLE.COM
-    dev_revision: main
+    dev_revision: demo
 
   quay:
     # Needs to be set consistently between hub and spoke clusters
