--- a/charts/hub/odf/templates/storagecluster.yaml
+++ b/charts/hub/odf/templates/storagecluster.yaml
@@ -23,5 +23,5 @@ spec:
     cephObjectStores: {}
   mirroring: {}
   multiCloudGateway:
-    dbStorageClassName: gp2
+    dbStorageClassName: thin-csi
     reconcileStrategy: standalone
