--- a/tests/hub-odf-naked.expected.yaml
+++ b/tests/hub-odf-naked.expected.yaml
@@ -179,5 +179,5 @@ spec:
     cephObjectStores: {}
   mirroring: {}
   multiCloudGateway:
-    dbStorageClassName: gp2
+    dbStorageClassName: thin-csi
     reconcileStrategy: standalone
