--- a/charts/hub/opp/templates/policy-ocm-observability.yaml
+++ b/charts/hub/opp/templates/policy-ocm-observability.yaml
@@ -37,8 +37,8 @@ spec:
                   bucket: '{{ `{{ (lookup "objectbucket.io/v1alpha1" "ObjectBucket" "" "obc-openshift-storage-obc-observability").spec.endpoint.bucketName }}` }}'
                   endpoint: '{{ `{{ (lookup "objectbucket.io/v1alpha1" "ObjectBucket" "" "obc-openshift-storage-obc-observability").spec.endpoint.bucketHost }}` }}'
                   insecure: true
-                  access_key: '{{ `{{ (lookup "v1" "Secret" "openshift-storage" "noobaa-admin").data.AWS_ACCESS_KEY_ID }}` | base64 -d }}'
-                  secret_key: '{{ `{{ (lookup "v1" "Secret" "openshift-storage" "noobaa-admin").data.AWS_SECRET_ACCESS_KEY }}` | base64 -d }}'
+                  access_key: '{{ `{{ (lookup "v1" "Secret" "openshift-storage" "noobaa-admin").data.AWS_ACCESS_KEY_ID | b64dec }}` }}'
+                  secret_key: '{{ `{{ (lookup "v1" "Secret" "openshift-storage" "noobaa-admin").data.AWS_SECRET_ACCESS_KEY | b64dec }}` }}'
               type: Opaque
         - complianceType: musthave
           objectDefinition:
